<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/favorite"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/rate"
        android:icon="@drawable/star"
        android:title="@string/rate_us"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share_app"/>
    <item
        android:id="@+id/termsCondition"
        android:icon="@drawable/tc"
        android:title="@string/terms_condition"/>
    <item
        android:id="@+id/privacy"
        android:icon="@drawable/privacy"
        android:title="@string/privacy_policies"/>
    <item
        android:id="@+id/developers"
        android:icon="@drawable/coding"
        android:title="@string/developers"/>

</menu>